--- a/dashboard.css
+++ b/dashboard.css
@@ -2,6 +2,7 @@ body{
 	margin:0px;
 	padding: 0px;
 	background-color:rgb(7, 144, 198);
+  background-image: linear-gradient(45deg, #146f9787, transparent);
 	overflow: hidden;
 	font-family: system-ui;
 }
