--- a/gallery.css
+++ b/gallery.css
@@ -52,7 +52,7 @@ header a {
   color: rgb(28, 0, 140);
 }
 .my-button{
-  width:200px;
+  width:170px;
   height:80px;
   font-size:30px;
   font-family: 'Times New Roman', Times, serif;
@@ -69,7 +69,7 @@ header a {
 }
 
 .my-button-2{
-  width:200px;
+  width:170px;
   height:80px;
   font-size:30px;
   font-family: 'Times New Roman', Times, serif;
@@ -85,7 +85,7 @@ header a {
 }
 
 .my-button-3{
-  width:200px;
+  width:170px;
   height:80px;
   font-size:30px;
   font-family: 'Times New Roman', Times, serif;
@@ -97,26 +97,31 @@ header a {
   margin-right: 100px;
   display: inline-block;
 }
-.overlay{
+.p{
   text-align: center;
   font-size: medium;
+  margin-left: 400px;
   
 }
 .gallery{
   display: flex;
-  justify-content: center;
+  justify-content:center;
   top: 40px;
-  align-items: center;
+  align-items:center;
+  margin-left: 0%;
  
 }
 .gallery-section{
   position: relative;
+  margin-left: 0%;
 }
 .gallery-section img{
-  width: 150%;
-  height: 40%;
+  margin-left:300px;
+  width: 300px;
+  height: 150px;
   position: absolute;
 }
+
 .Image1{
   left: 5em;
 }
@@ -130,7 +135,6 @@ header a {
 }
 .gallery-section img:hover{
   z-index:20;
-  
 }
 .gallery-section:hover img:not(:hover){
   transform:scale(.9)
@@ -148,20 +152,6 @@ header a {
 }
 .gallery-item-1:hover{
   transform: scale(1.1);
-}
-.gallery-item{
-  border-radius: 0%;
-   margin-top: 50;
-   margin-left: 50;
-   margin-right: 50;
-   margin-bottom: 50;
-   height: 70vh;
-   transition: transform 0.3s ease-in-out;
-}
-p{
-   text-align: center;
-   font-size: x-large;
-   display: block;
 }
 .dropdown-content {
   display: none;
@@ -208,7 +198,189 @@ header .nav-link:hover {
   font-weight: bold;
 }
 
+/********** section 1 **************/
 
+.section-1 {
+  padding: 6vmin 0vmin;
+}
+
+
+/*  Section 2  */
+
+.cover {
+  width: 100%;
+  height: 55vmin;
+  /* background: url("img/"); */
+  background-color: grey;
+  background-position: -24rem -19rem;
+  background-size: 150%;
+  position: relative;
+}
+
+.cover .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+}
+
+.cover .content {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  padding-top: 19vmin;
+}
+
+.cover .content > h1 {
+  font-family: var(--Patua);
+  font-size: 6vmin;
+  color: rgb(0, 0, 0);
+}
+
+.cover .content > p {
+  font-family: var(--Rubik);
+  font-size: 2vmin;
+  color: #000000;
+}
+
+.numbers .rect {
+  position: relative;
+  z-index: 1;
+  background: rgb(255, 255, 255);
+  width: 17rem;
+  height: 17rem;
+  padding-top: 3.5vmin;
+  margin: 1rem;
+  border-radius: 0.5em;
+  box-shadow: 1px 2px 50px 0px rgba(0, 191, 255, 0.484);
+}
+
+.numbers {
+  margin-top: -15vmin;
+}
+
+.numbers .rect h1 {
+  font-size: 5rem;
+  color: rgb(71, 181, 255);
+}
+
+.numbers .rect > p {
+  font-family: var(--Patua);
+}
+
+.purchase > h1 {
+  padding-top: 15vmin;
+  padding-bottom: 0.1em;
+  font-family: var(--Lobster);
+}
+
+.purchase > p {
+  color: var(--light-black);
+  font-size: 3vmin;
+  padding-bottom: 10vmin;
+}
+
+.purchase .cards .card {
+  width: 22rem;
+  margin: 3vmin 3vmin;
+}
+
+.cards div {
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+}
+
+.cards .title {
+  background: rgba(208, 241, 241, 0.199);
+  padding: 1.4em 2.5em;
+  font-size: 2vmin;
+}
+
+.card .card-text {
+  padding: 2.5rem 3rem;
+  color: var(--light-black);
+}
+.card-body{
+    cursor: pointer;
+}
+.card-body .pricing {
+  background: rgba(3, 213, 250, 0.501);
+  border-top-right-radius: 170px;
+  border-top-left-radius: 170px;
+}
+
+.card-body .pricing > h1 {
+  font-size: 4vmin;
+  padding: 1em 0.5em;
+}
+
+/* Section 3 */
+
+.section-3 {
+  height: 70vmin;
+  margin-top: 15vmin;
+  background: var(--bggradient);
+}
+
+.section-3 .col-md-12 > h1 {
+  padding: 2em 0 0.5em 0;
+  color: rgb(0, 0, 0);
+  font-size: 6vmin;
+}
+
+.section-3 .col-md-12 > p {
+  padding: 0 4em;
+  padding-bottom: 2em;
+  color: var(--light-gray);
+  font-size: 3vmin;
+}
+
+.section-3 .desktop {
+  background: rgba(140, 236, 255, 0.903);
+  display: inline-block;
+  border-radius: 3em;
+  padding: 2vmin 4.5vmin;
+  margin: 1em;
+}
+
+.section-3 .desktop h3 {
+  font-size: 4vmin;
+}
+
+.section-3 .desktop p {
+  font-size: 2vmin;
+}
+
+/* Section Team */
+
+.section-4 .container h1 {
+  font-size: 6vmin;
+  padding-top: 14vmin;
+}
+
+.section-4 .team {
+  padding: 10vmin 4vmin;
+}
+
+.section-4 .card {
+  width: 22em;
+  margin-top: 10vmin;
+}
+
+.section-4 .card .card-text {
+  padding: 0.5em;
+}
+
+.section-4 .card-body > a {
+  font-size: 1.5em;
+}
+
+.section-4 .carousel-item {
+  padding-left: 3rem;
+}
 
 .border-radius {
   border-radius: 340px;
@@ -261,226 +433,3 @@ body{
 .text-light{
     color: #ffffff !important;
 }
-<<<<<<< HEAD
-=======
-.container-fluid-0{
-    right: 10px;
-    top: 50px;
-    width: 70px;
-    height: 70px;
-}
-.nav-item{
-    width: 100;
-    display: flex;
-    justify-content: space-between;
-    align-items:right;
-    list-style: none;
-    position: relative;
-    background-color: white;
-    padding: 12PX 20PX;
-    --color2:#02021f;
-float:left;
-left: 35%;
-
-}
-.login-btn{
-    right: 0%;
-}
-.back-link {
-    display: flex;
-    align-items: center;
-    color: #0c0c0c;
-    text-decoration: none;
-    transition: color 0.3s ease;
-  margin-top:20 ;
-
-  }
-  
-  .back-link:hover {
-    color:#100f0f;
-  }
-  
-  .back-icon {
-    font-size: 5em;
-    margin-right: 5px;
-  }
-  
-.my-button{
-    width:200px;
-    height:80px;
-    font-size:30px;
-    font-family: 'Times New Roman', Times, serif;
-    background-color:#6ab1bc;
-    color: black;
-    border:0px;
-    margin-right: 100px;
-    box-shadow: 1px rgb(121, 116, 116);;
-    border-radius: 10px;
-    margin-left: 230px;
-    text-size-adjust: 40;
-    display: inline-block;
-    position: relative;
-}
-
-.my-button-2{
-    width:200px;
-    height:80px;
-    font-size:30px;
-    font-family: 'Times New Roman', Times, serif;
-    background-color:#e8da5f;
-    color: black;
-    border:0px;
-    margin-right: 130px;
-    box-shadow: 10px rgb(96, 93, 93);
-    border-radius: 10px;
-    margin-left: 100px;
-    text-size-adjust: 40;
-    display: inline-block;
-}
-
-.my-button-3{
-    width:200px;
-    height:80px;
-    font-size:30px;
-    font-family: 'Times New Roman', Times, serif;
-    background-color:#ad77aa;
-    color: black;
-    border:0px;
-    box-shadow: 1px rgb(121, 116, 116);
-    border-radius: 10px;
-    margin-right: 100px;
-    display: inline-block;
-}
-.logo img{width:40px;}
-.menu{display: inline-table;}
-.menu li a{padding-left: 30px;}
-.menu li a{
-    display: inline;
-    text-decoration: none;
-    color: var(--color1);
-    text-align: center;
-    transition: 0.15s; 
-    position: relative;
-    text-transform: uppercase;
-}
-.menu li a::after{
-content: "";
-position: absolute;
-width: 100px;
-height: 0%;
-background-color: var(--color1);
-
-}
-.menu li a:hover:after  {width:100px}
-.open-menu , .close-menu {
-    position: absolute;
-    color: var(--color1);
-    cursor: pointer;
-    font-size: 1.5rem;
-
-}
-.open-menu{
-    top:50%;
-    right:20px;
-    transform: translateY(-50%);
-}
-.close-menu{
-    top: 20px;
-    right: 20px;
-    display: none;
-}
-#check {display: no;}
-@media(max-width:610px){
-    .menu{flex-direction: column;
-    align-items: center;
-justify-content: center;
-width: 80%;
-height: 100vh;
-position: fixed;
-top: 0%;
-right: 0%;
-z-index:100;
-background-color: var(--color2);
-transition: all 0.2s;
-}}
-.menu li{margin-top: 40px;}
-.menu li a {padding :10px;}
-
-
-
-
-
-.gallery{
-  display: flex;
-  justify-content: center;
-  top: 40px;
-  align-items: center;
- 
-}
-.gallery-item-1{
-  width: 200px;
-  height: 200px;
-  margin-right: 20px;
-  transition: transform 0.3s ease-in-out;
-}
-.gallery-item-1:hover{
-  transform: scale(1.1);
-}
-.gallery-item{
-   border-radius: 0%;
-    margin-top: 50;
-    margin-left: 50;
-    margin-right: 50;
-    margin-bottom: 50;
-    height: 70vh;
-    transition: transform 0.3s ease-in-out;
-}
-p{
-    text-align: center;
-    font-size: x-large;
-    display: block;
-}
-.border-radius {
-    border-radius: 340px;
-    width: 60%;
-  }
-  footer {
-    background: rgba(0, 0, 0, 0.815);
-    overflow-x: hidden;
-    padding: 14vmin 18vmin;
-  }
-  
-  footer p > span {
-    color: #ff512f;
-  }
-  
-  footer input {
-    border: none !important;
-  }
-  
-  footer input::placeholder {
-    color: rgb(255, 255, 255) !important;
-  }
-  
-  footer .input-group .input-group-text {
-    background: var(--bggradient);
-    border: none;
-  }
-  
-  footer .column i {
-    color: #dd2476;
-  }
-  
-  footer .column i + i {
-    padding: 0 0.5em;
-  }
-  
-  .sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background: rgba(255, 255, 255, 85%);
-    z-index: 9999;
-    transition: all 1.5s ease;
-  }
->>>>>>> f25e2e60139fe3ae04030292288d8129bdc3c2a1
