--- a/login.css
+++ b/login.css
@@ -10,7 +10,9 @@
 
 body,
 input {
-  font-family: "Poppins", sans-serif;
+  /* font-family: "Poppins", sans-serif; */
+  font-family: Montserrat;
+
 }
 
 .container {
