--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,7 @@
 body{
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
+    font-family: Montserrat;
+
     margin: 0;
     background-color: white;
     overflow-x: hidden;
