--- a/style.css
+++ b/style.css
@@ -53,11 +53,11 @@ header img {
   margin-top: 5px;
   margin-left: 0%;
 }
-.navbar-collapse
+/* .navbar-collapse
 {
-  /* padding: 0% 0%; */
+  padding: 0% 0%;
   
-}
+} */
 
 header a {
   /* font-family: var(--Sniglet-font); */
