--- a/contact.css
+++ b/contact.css
@@ -9,15 +9,15 @@
 body{
   min-height: 100vh;
   width: 100%;
-  background: #bde9f6;
+  background: #ffffff;
   /* display: flex; */
   align-items: center;
   justify-content: center;
   margin-right: 5px;
 }
 .container{
-  width: 85%;
-  background: #fff;
+  width: 90%;
+  background: #bde9f6;
   border-radius: 6px;
   /* padding: 20px 60px 30px 40px; */
   padding: 40px 70px 40px 50px;
@@ -48,7 +48,7 @@ body{
   right: -15px;
   top: 50%;
   transform: translateY(-50%);
-  background: #afafb6;
+  background: #6a6a6a;
 }
 .content .left-side .details{
   margin: 14px;
@@ -66,7 +66,7 @@ body{
 .content .left-side .details .text-one,
 .content .left-side .details .text-two{
   font-size: 14px;
-  color: #afafb6;
+  color: #878787;
 }
 .container .content .right-side{
   width: 75%;
@@ -273,4 +273,7 @@ section {
 header img {
     height: 80px;
     margin-left: -110px;
+}
+i{
+  cursor: pointer;
 }
