--- a/leaderboard.css
+++ b/leaderboard.css
@@ -46,7 +46,7 @@
     margin-left: auto;
     display: block;
     padding: 1em;
-    padding-top: 8em;
+    padding-top: 2em;
     margin-top: 10vh;
    
 }
@@ -61,7 +61,7 @@
   transition: .1s ease-in-out;
   background-color: rgb(128, 118, 112);
   box-shadow: grey  5px 2px 6px;
-  background-image: linear-gradient(rgb(77, 111, 158),rgb(156, 156, 236) );
+  background-image: linear-gradient(rgb(154, 194, 218),rgb(156, 156, 236) );
 }
 
 .theme-img{
@@ -75,7 +75,8 @@
     padding: 1vh;
     color: black;
     transform: translateY(-5em);
-    margin-left: 35%;
+    margin-left: 45vh;
+    margin-top: 0.000000001vh;
 }
 .search{
     border-radius: 5px;
@@ -90,16 +91,13 @@
 .search:focus{
     outline: none;
 }
-
-
-
-table{
+  table {
     margin-top: 2em;
-    width: 60em;
-    color:black;
-    margin-right:auto;
-    margin-left: auto;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    width: 73em;
+    color: black;
+    margin-right: -100vh;
+    margin-left: -25vh;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin-bottom: 20%;
     
 }
@@ -159,6 +157,7 @@ tbody tr:nth-child(odd){
 header,
 section {
   overflow-x: hidden;
+  left: 100px;
 }
 header img {
     height: 80px;
@@ -175,7 +174,7 @@ header img {
 
 
 header a {
-  font-family: var(--Sniglet-font);
+  /*font-family: var(--Sniglet-font);*/
   font-size: 0.9em;
   color: rgb(28, 0, 140);
 }
@@ -565,8 +564,10 @@ header .container .col-md-7 p {
         margin-top: 30vh;
     }
     table{
-        max-width: 100vw;
+        max-width:50vh;
         overflow-x: scroll;
+        margin-left: -3vh;
+        margin-right: 800vh;
 
     }
 
@@ -577,11 +578,18 @@ header .container .col-md-7 p {
       padding: 1vh;
       margin-left: 5vh;
       margin-top: 0.1vh;
-      margin-right: 10vh;
-     
-      
-      
+      margin-right: 10vh;  
+      z-index: 999;
     }
+    .dropdownn-content {
+      display: none;
+      position: absolute;
+      background-color: #d1d1d1;
+      min-width: 160px;
+      box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.2);
+      z-index: 2;
+    }
+    
     .card{
        /*margin-top: 10vh; */
       padding: 3% 3% ;
